--- a/index.html
+++ b/index.html
@@ -64,6 +64,48 @@
         <!--</tbody></table>-->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/survey.jpg" alt="survey_png" width="160" style="border-style: none">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="data/A_Survey_of_Semantic_Reasoning_Frameworks_for_Robotic_Systems.pdf">
+                <papertitle>A Survey of Semantic Reasoning Frameworks for Robotic Systems</papertitle>
+              </a>
+              <br>
+              <br>
+              <strong>Weiyu Liu*</strong>,
+              <a href="http://www.prism.gatech.edu/~adaruna3/">Angel Daruna*</a>,
+              <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>
+              <br>
+              <em>Under Review</em>, 2020
+              <br>
+              <a href="data/A_Survey_of_Semantic_Reasoning_Frameworks_for_Robotic_Systems.pdf">preprint</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/sodg.png" alt="png" width="160" style="border-style: none">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="data/Same_Object_Different_Grasps.pdf">
+                <papertitle>Same Object, Different Grasps: Data and Semantic Knowledge for Task-Oriented Grasping</papertitle>
+              </a>
+              <br>
+              <br>
+              <a href="http://adithyamurali.com/">Adithya Murali</a>,
+              <strong>Weiyu Liu</strong>,
+              <a href="http://kennethmarino.com/">Kenneth Marino</a>,
+              <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>
+              <a href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>
+              <br>
+              <em>Under Review</em>, 2020
+              <br>
+              <a href="data/Same_Object_Different_Grasps.pdf">preprint</a>
+            </td>
+          </tr>
+
           <tr onmouseout="cage_stop()" onmouseover="cage_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -110,7 +152,7 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='apr_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/apr_new.mp4" type="video/mp4">
+                <source src="images/apr.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div>
                 <img src='images/apr.jpg' width="160">
