--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <a href="http://adithyamurali.com/">Adithya Murali</a>,
               <strong>Weiyu Liu</strong>,
               <a href="http://kennethmarino.com/">Kenneth Marino</a>,
-              <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>
+              <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>,
               <a href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>
               <br>
               <em>Under Review</em>, 2020
