--- a/index.html
+++ b/index.html
@@ -100,9 +100,14 @@
               <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>,
               <a href="http://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>
               <br>
-              <em>Under Review</em>, 2020
+              <em>Conference on Robot Learning (CoRL)</em>, 2020
               <br>
-              <a href="data/Same_Object_Different_Grasps.pdf">preprint</a>
+              <a href="https://arxiv.org/abs/2011.06431">arxiv</a> /
+              <a href="https://github.com/adithyamurali/TaskGrasp">code & data</a> /
+              <a href="https://youtu.be/ByHVc-sPmd8">video</a> /
+              <a href="https://youtu.be/eV-KyT6OK14">talk</a> /
+              <a href="https://sites.google.com/view/taskgrasp">project page</a> / 
+              <a href="data/MuraliCoRL2020.bib">bibtex</a>
             </td>
           </tr>
 
@@ -141,6 +146,7 @@
               <a href="https://arxiv.org/abs/1909.11142">arxiv</a> /
               <a href="https://github.com/wliu88/rail_semantic_grasping">code & data</a> /
               <a href="https://youtu.be/EnHUHQv8hr0">video</a> /
+              <a href="https://icra.cc.gatech.edu/robots-gain-ability-to-master-object-manipulation-with-context-aware-technique/">press</a> /
               <a href="data/LiuICRA2020.bib">bibtex</a>
               <!--<a href="data/B3DO_ICCV_2011.bib">bibtex</a> /-->
               <!--<a href="https://drive.google.com/file/d/1qf4-U5RhSw12O7gzQwW66SMQhs2FWYDW/view?usp=sharing">"smoothing" code</a>-->
