--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
               </p>
               <p>
                 I am a Robotics Ph.D. student at Georgia Institute of Technology, where I am advised by professor <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>.
+                In the summer of 2021, I interned at Nvidia Research, working with <a href="https://cpaxton.github.io/about/">Chris Paxton</a>, <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>, <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>.
                 Prior to joining the PhD program, I received my Bachelor’s degree in Electrical Engineering from Georgia Tech.
               </p>
               <p>
-                My research examines <b>semantic reasoning</b> techniques for robotic systems, which enable robots to encode and use semantic knowledge, including concepts, facts, and beliefs about the world. I am interested in developing machine learning techniques for performing inference on semantic knowledge, such as large-scale knowledge graphs. I am also passionate about applying knowledge reasoning to challenges associated with real-world robotic operations, such as task-oriented grasping.
-              </p>
+                My goal is to develop robots that can effectively perceive, model, and interact with objects in the real world. Towards this goal, I study the representation and reasoning of semantic knowledge, which can concisely describe target domains with symbols and reveal meaningful patterns shared between problems and environments (e.g., clean cups are likely to be found in kitchen cabinets) . My research develops semantic reasoning frameworks capable of modeling complex semantic knowledge grounded in robot perception and action.</p>
               <p style="text-align:center">
                 <a href="mailto:wliu88@gatech.edu">Email</a> &nbsp/&nbsp
                 <a href="data/WeiyuLiu-CV.pdf">CV</a> &nbsp/&nbsp
@@ -81,6 +81,44 @@
               <em>Under Review</em>, 2020
               <br>
               <a href="data/A_Survey_of_Semantic_Reasoning_Frameworks_for_Robotic_Systems.pdf">preprint</a>
+            </td>
+          </tr>
+
+          <tr onmouseout="structformer_stop()" onmouseover="structformer_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='structformer_image'><video  width=100% height=100% muted autoplay loop>
+                <source src="images/structformer.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/structformer.jpg' width="160">
+              </div>
+              <script type="text/javascript">
+                function structformer_start() {
+                  document.getElementById('structformer_image').style.opacity = "1";
+                }
+
+                function structformer_stop() {
+                  document.getElementById('structformer_image').style.opacity = "0";
+                }
+                structformer_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="data/structformer.pdf">
+                <papertitle>StructFormer: Learning Spatial Structure for Language-Guided Semantic Rearrangement of Novel Objects</papertitle>
+              </a>
+              <br>
+              <br>
+              <strong>Weiyu Liu</strong>,
+              <a href="https://cpaxton.github.io/about/">Chris Paxton</a>,
+              <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>,
+              <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>
+              <br>
+              <em>Under Review</em>, 2021
+              <br>
+              <a href="data/structformer.pdf">paper</a> /
+              <a href="https://sites.google.com/view/structformer">website</a>
             </td>
           </tr>
 
