update structformer link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="data/structformer.pdf">
+              <a href="https://arxiv.org/abs/2110.10189">
                 <papertitle>StructFormer: Learning Spatial Structure for Language-Guided Semantic Rearrangement of Novel Objects</papertitle>
               </a>
               <br>
@@ -117,7 +117,7 @@
               <br>
               <em>Under Review</em>, 2021
               <br>
-              <a href="data/structformer.pdf">paper</a> /
+              <a href="https://arxiv.org/abs/2110.10189">arxiv</a> /
               <a href="https://sites.google.com/view/structformer">website</a>
             </td>
           </tr>
