--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </p>
               <p>
                 I am a Robotics Ph.D. student at Georgia Institute of Technology, where I am advised by professor <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>.
-                In the summer of 2021, I interned at Nvidia Research, working with <a href="https://cpaxton.github.io/about/">Chris Paxton</a>, <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>, <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>.
+                In the summer of 2021, I interned at Nvidia Research, working with <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>, <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>, and <a href="https://cpaxton.github.io/about/">Chris Paxton</a>.
                 Prior to joining the PhD program, I received my Bachelor’s degree in Electrical Engineering from Georgia Tech.
               </p>
               <p>
