update structformer link, bibs, and cv

--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
               <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>,
               <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>
               <br>
-              <em>Under Review</em>, 2021
+              <em>International Conference on Robotics and Automation (ICRA)</em>, 2022
               <br>
               <a href="https://arxiv.org/abs/2110.10189">arxiv</a> /
-              <a href="https://sites.google.com/view/structformer">website</a>
+              <a href="https://github.com/wliu88/StructFormer">code & data</a> /
+              <a href="https://sites.google.com/view/structformer">website</a> /
+              <a href="https://drive.google.com/file/d/1LPGDk1ghZ_Zjxcx69-9GQOY_En0N3ZSD/view">talk</a>
             </td>
           </tr>
 
