add twitter and cv date

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                 My goal is to develop robots that can effectively perceive, model, and interact with objects in the real world. Towards this goal, I study the representation and reasoning of semantic knowledge, which can concisely describe target domains with symbols and reveal meaningful patterns shared between problems and environments (e.g., clean cups are likely to be found in kitchen cabinets) . My research develops semantic reasoning frameworks capable of modeling complex semantic knowledge grounded in robot perception and action.</p>
               <p style="text-align:center">
                 <a href="mailto:wliu88@gatech.edu">Email</a> &nbsp/&nbsp
-                <a href="data/WeiyuLiu-CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/WeiyuLiu-CV.pdf">CV (April 2022)</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=PHi0YEQAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/wliu88">Github</a>
+                <a href="https://twitter.com/Weiyu_Liu_">Twitter</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
