--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
                 <name>Weiyu Liu</name>
               </p>
               <p>
-                I am a Robotics Ph.D. student at Georgia Institute of Technology, where I am advised by professor <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>.
-                In the summer of 2021, I interned at Nvidia Research, working with <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>, <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>, and <a href="https://cpaxton.github.io/about/">Chris Paxton</a>.
-                Prior to joining the PhD program, I received my Bachelor’s degree in Electrical Engineering from Georgia Tech.
+                I recently completed my Ph.D. in robotics at Georgia Institute of Technology, where I am advised by professor <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>.
+                In the summer of 2021 and 2022, I interned at Nvidia Research, working with <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>, <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>, <a href="https://animesh.garg.tech/">Animesh Garg</a>, and <a href="https://cpaxton.github.io/about/">Chris Paxton</a>.
+                Prior to joining the Ph.D. program, I received my Bachelor’s degree in Electrical Engineering from Georgia Tech.
               </p>
               <p>
                 My goal is to develop robots that can effectively perceive, model, and interact with objects in the real world. Towards this goal, I study the representation and reasoning of semantic knowledge, which can concisely describe target domains with symbols and reveal meaningful patterns shared between problems and environments (e.g., clean cups are likely to be found in kitchen cabinets) . My research develops semantic reasoning frameworks capable of modeling complex semantic knowledge grounded in robot perception and action.</p>
               <p style="text-align:center">
                 <a href="mailto:wliu88@gatech.edu">Email</a> &nbsp/&nbsp
                 <a href="data/WeiyuLiu-CV.pdf">CV (April 2022)</a> &nbsp/&nbsp
+                <a href="data/WeiyuLiu-ResearchStatement.pdf">Research Statement</a> <br>
                 <a href="https://scholar.google.com/citations?user=PHi0YEQAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/wliu88">Github</a>
+                <a href="https://github.com/wliu88">Github</a> &nbsp/&nbsp
                 <a href="https://twitter.com/Weiyu_Liu_">Twitter</a>
               </p>
             </td>
@@ -70,18 +71,60 @@
               <img src="images/survey.jpg" alt="survey_png" width="160" style="border-style: none">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="data/A_Survey_of_Semantic_Reasoning_Frameworks_for_Robotic_Systems.pdf">
+              <a href="https://authors.elsevier.com/a/1g3zl_KzXcn9Dt">
                 <papertitle>A Survey of Semantic Reasoning Frameworks for Robotic Systems</papertitle>
               </a>
               <br>
               <br>
-              <strong>Weiyu Liu*</strong>,
-              <a href="http://www.prism.gatech.edu/~adaruna3/">Angel Daruna*</a>,
+              <strong>Weiyu Liu<sup>1</sup></strong>,
+              <a href="http://www.prism.gatech.edu/~adaruna3/">Angel Daruna<sup>1</sup></a>,
+              <a href="https://maithili.github.io/">Maithili Patel<sup>2</sup></a>,
+              <a href="https://kartikvrama.github.io/">Kartik Ramachandruni<sup>2</sup></a>,
               <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>
               <br>
-              <em>Under Review</em>, 2020
+              <em>Robotics and Autonomous Systems</em>, 2022
               <br>
-              <a href="data/A_Survey_of_Semantic_Reasoning_Frameworks_for_Robotic_Systems.pdf">preprint</a>
+              <a href="https://authors.elsevier.com/a/1g3zl_KzXcn9Dt">public link</a> /
+              <a href="data/LiuSurvey2022.bib">bibtex</a>
+            </td>
+          </tr>
+
+          <tr onmouseout="structdiffusion_stop()" onmouseover="structdiffusion_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='structdiffusion_image'><video  width=100% height=100% muted autoplay loop>
+                <source src="images/structdiffusion.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/structdiffusion.jpg' width="160">
+              </div>
+              <script type="text/javascript">
+                function structdiffusion_start() {
+                  document.getElementById('structdiffusion_image').style.opacity = "1";
+                }
+
+                function structdiffusion_stop() {
+                  document.getElementById('structdiffusion_image').style.opacity = "0";
+                }
+                structdiffusion_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2211.04604">
+                <papertitle>StructDiffusion: Object-Centric Diffusion for Semantic Rearrangement of Novel Objects</papertitle>
+              </a>
+              <br>
+              <br>
+              <strong>Weiyu Liu</strong>,
+              <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>,
+              <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>,
+              <a href="https://cpaxton.github.io/about/">Chris Paxton</a>
+              <br>
+              <em>CoRL Workshop on Language and Robot Learning</em>, 2022
+              <br>
+              <a href="https://arxiv.org/abs/2211.04604">arxiv</a> /
+              <a href="http://weiyuliu.com/StructDiffusion/">website</a> /
+              <a href="data/structdiffusion.bib">bibtex</a>
             </td>
           </tr>
 
@@ -121,7 +164,8 @@
               <a href="https://arxiv.org/abs/2110.10189">arxiv</a> /
               <a href="https://github.com/wliu88/StructFormer">code & data</a> /
               <a href="https://sites.google.com/view/structformer">website</a> /
-              <a href="https://drive.google.com/file/d/1LPGDk1ghZ_Zjxcx69-9GQOY_En0N3ZSD/view">talk</a>
+              <a href="https://drive.google.com/file/d/1LPGDk1ghZ_Zjxcx69-9GQOY_En0N3ZSD/view">talk</a> /
+              <a href="data/LiuICRA2022.bib">bibtex</a>
             </td>
           </tr>
 
