update photo, cv, bio

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                 <name>Weiyu Liu</name>
               </p>
               <p>
-                I recently completed my Ph.D. in robotics at Georgia Institute of Technology, where I am advised by professor <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>.
-                In the summer of 2021 and 2022, I interned at Nvidia Research, working with <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>, <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>, <a href="https://animesh.garg.tech/">Animesh Garg</a>, and <a href="https://cpaxton.github.io/about/">Chris Paxton</a>.
+                I am a Postdoctoral Scholar working with <a href="https://jiajunwu.com/">Jiajun Wu</a> in the CogAI group and <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab (SVL)</a>. I completed my Ph.D. in robotics at Georgia Institute of Technology, where I am advised by <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>.
+                In 2021 and 2022, I interned at Nvidia Research, working with <a href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a>, <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>, <a href="https://animesh.garg.tech/">Animesh Garg</a>, and <a href="https://cpaxton.github.io/about/">Chris Paxton</a>.
                 Prior to joining the Ph.D. program, I received my Bachelor’s degree in Electrical Engineering from Georgia Tech.
               </p>
               <p>
                 My goal is to develop robots that can effectively perceive, model, and interact with objects in the real world. Towards this goal, I study the representation and reasoning of semantic knowledge, which can concisely describe target domains with symbols and reveal meaningful patterns shared between problems and environments (e.g., clean cups are likely to be found in kitchen cabinets) . My research develops semantic reasoning frameworks capable of modeling complex semantic knowledge grounded in robot perception and action.</p>
               <p style="text-align:center">
-                <a href="mailto:wliu88@gatech.edu">Email</a> &nbsp/&nbsp
-                <a href="data/WeiyuLiu-CV.pdf">CV (April 2022)</a> &nbsp/&nbsp
+                <a href="mailto:weiyul@stanford.edu">Email</a> &nbsp/&nbsp
+                <a href="data/WeiyuLiu-CV.pdf">CV (Feb 2023)</a> &nbsp/&nbsp
                 <a href="data/WeiyuLiu-ResearchStatement.pdf">Research Statement</a> <br>
                 <a href="https://scholar.google.com/citations?user=PHi0YEQAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/wliu88">Github</a> &nbsp/&nbsp
@@ -47,7 +47,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/WeiyuLiu.jpg"><img style="width:90%;max-width:100%" alt="profile photo" src="images/WeiyuLiu_circle.png" class="hoverZoomLink"></a>
+              <a href="images/WeiyuLiuRobot.jpg"><img style="width:90%;max-width:100%" alt="profile photo" src="images/WeiyuLiuRobot.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -71,7 +71,7 @@
               <img src="images/survey.jpg" alt="survey_png" width="160" style="border-style: none">
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://authors.elsevier.com/a/1g3zl_KzXcn9Dt">
+              <a href="https://www.sciencedirect.com/science/article/abs/pii/S092188902200183X">
                 <papertitle>A Survey of Semantic Reasoning Frameworks for Robotic Systems</papertitle>
               </a>
               <br>
@@ -82,10 +82,10 @@
               <a href="https://kartikvrama.github.io/">Kartik Ramachandruni<sup>2</sup></a>,
               <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>
               <br>
-              <em>Robotics and Autonomous Systems</em>, 2022
+              <em>Robotics and Autonomous Systems</em>, 2023
               <br>
-              <a href="https://authors.elsevier.com/a/1g3zl_KzXcn9Dt">public link</a> /
-              <a href="data/LiuSurvey2022.bib">bibtex</a>
+              <a href="https://www.sciencedirect.com/science/article/abs/pii/S092188902200183X">paper</a> /
+              <a href="data/LiuSurvey2023.bib">bibtex</a>
             </td>
           </tr>
 
