add 2023 papers so far

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 My goal is to develop robots that can effectively perceive, model, and interact with objects in the real world. Towards this goal, I study the representation and reasoning of semantic knowledge, which can concisely describe target domains with symbols and reveal meaningful patterns shared between problems and environments (e.g., clean cups are likely to be found in kitchen cabinets) . My research develops semantic reasoning frameworks capable of modeling complex semantic knowledge grounded in robot perception and action.</p>
               <p style="text-align:center">
                 <a href="mailto:weiyul@stanford.edu">Email</a> &nbsp/&nbsp
-                <a href="data/WeiyuLiu-CV.pdf">CV (Feb 2023)</a> &nbsp/&nbsp
-                <a href="data/WeiyuLiu-ResearchStatement.pdf">Research Statement</a> <br>
+                <a href="data/WeiyuLiu-CV.pdf">CV (Sep 2023)</a> &nbsp/&nbsp
+                <a href="data/WeiyuLiu-ResearchStatement.pdf">Research Statement (2022)</a> <br>
                 <a href="https://scholar.google.com/citations?user=PHi0YEQAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/wliu88">Github</a> &nbsp/&nbsp
                 <a href="https://twitter.com/Weiyu_Liu_">Twitter</a>
@@ -65,6 +65,112 @@
           <!--</tr>-->
         <!--</tbody></table>-->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+          <tr onmouseout="cpm_stop()" onmouseover="cpm_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='cpm_image'><video  width=100% height=100% muted autoplay loop>
+                <source src="images/cpm.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/cpm.jpg' width="160">
+              </div>
+              <script type="text/javascript">
+                function cpm_start() {
+                  document.getElementById('cpm_image').style.opacity = "1";
+                }
+
+                function cpm_stop() {
+                  document.getElementById('cpm_image').style.opacity = "0";
+                }
+                cpm_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="">
+                <papertitle>Composable Part-Based Manipulation</papertitle>
+              </a>
+              <br>
+              <br>
+              <strong>Weiyu Liu</strong>,
+              <a href="https://jiayuanm.com/">Jiayuan Mao</a>,
+              <a href="http://web.stanford.edu/~joycj/">Joy Hsu</a>,
+              <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>,
+              <a href="https://animesh.garg.tech/">Animesh Garg</a>,
+              <a href="https://jiajunwu.com/">Jiajun Wu</a>
+              <br>
+              <em>Conference on Robot Learning (CoRL)</em>, 2023
+              <br>
+              <a href="https://openreview.net/forum?id=o-K3HVUeEw">paper</a> /
+              <a href="https://sites.google.com/view/part-based-manipulation">website</a> /
+              <a href="data/cpm.bib">bibtex</a>
+            </td>
+          </tr>
+
+          <tr onmouseout="eRD_stop()" onmouseover="eRD_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='eRD_image'><video  width=100% height=100% muted autoplay loop>
+                <source src="images/eRD.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video></div>
+                <img src='images/eRD.jpg' width="160">
+              </div>
+              <script type="text/javascript">
+                function eRD_start() {
+                  document.getElementById('eRD_image').style.opacity = "1";
+                }
+
+                function eRD_stop() {
+                  document.getElementById('eRD_image').style.opacity = "0";
+                }
+                eRD_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2305.10857">
+                <papertitle>Latent Space Planning for Multi-Object Manipulation with Environment-Aware Relational Classifiers</papertitle>
+              </a>
+              <br>
+              <br>
+              <a href="https://robot-learning.cs.utah.edu/yixuanh">Yixuan Huang</a>,
+              <a href="https://nicholscrawford.github.io/">Nichols Crawford Taylor</a>,
+              <a href="https://adamconkey.github.io/">Adam Conkey</a>,
+              <strong>Weiyu Liu</strong>,
+              <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>,
+              <br>
+              <em>Under Review</em>, 2023
+              <br>
+              <a href="https://arxiv.org/abs/2305.10857">arxiv</a> /
+              <a href="https://sites.google.com/view/erelationaldynamics">website</a> /
+              <a href="data/erd.bib">bibtex</a>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/grasp_gpt.jpg" alt="grasp_gpt" width="160" style="border-style: none">
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2307.13204">
+                <papertitle>GraspGPT: Leveraging Semantic Knowledge from a Large Language Model for Task-Oriented Grasping</papertitle>
+              </a>
+              <br>
+              <br>
+              <a href="https://mkt1412.github.io/">Chao Tang</a>,
+              Dehao Huang
+              Wenqi Ge,
+              <strong>Weiyu Liu</strong>,
+              <a href="https://webdocs.cs.ualberta.ca/~zhang/index.html">Hong Zhang</a>
+              <br>
+              <em>Under Review</em>, 2023
+              <br>
+              <a href="https://arxiv.org/abs/2307.13204">arxiv</a> /
+              <a href="https://github.com/mkt1412/GraspGPT_public">code & data</a> /
+              <a href="https://sites.google.com/view/graspgpt/">website</a> /
+              <a href="data/graspgpt.bib">bibtex</a>
+            </td>
+          </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -111,19 +217,23 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2211.04604">
-                <papertitle>StructDiffusion: Object-Centric Diffusion for Semantic Rearrangement of Novel Objects</papertitle>
+                <papertitle>StructDiffusion: Language-Guided Creation of Physically-Valid Structures using Unseen Objects</papertitle>
               </a>
               <br>
               <br>
               <strong>Weiyu Liu</strong>,
+              <a href="https://yilundu.github.io/">Yilun Du</a>,
               <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>,
               <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>,
               <a href="https://cpaxton.github.io/about/">Chris Paxton</a>
               <br>
+              <em>Robotics: Science and Systems (RSS)</em>, 2023
+              <br>
               <em>CoRL Workshop on Language and Robot Learning</em>, 2022
               <br>
               <a href="https://arxiv.org/abs/2211.04604">arxiv</a> /
-              <a href="http://weiyuliu.com/StructDiffusion/">website</a> /
+              <a href="https://github.com/StructDiffusion/StructDiffusion">code & data</a> /
+              <a href="https://structdiffusion.github.io/">website</a> /
               <a href="data/structdiffusion.bib">bibtex</a>
             </td>
           </tr>
